tests/sources/invalid/arrays/array_access_undefined_index.fire
// Semantic error: array index expression references an undefined
// identifier, so its type cannot be determined.

fn array_access_undefined_index() -> void {
    arr: int32[] = [1, 2, 3];
    v: int32 = arr[undefinedIndex];  //~ ERROR FS-PARSE-0003 @20
}
